2005-09-14  Sven Panne  <sven.panne@aedion.de>

	* Makefile.am, examples/Makefile.am, src/Makefile.am,
	test_suite/Makefile.am: Automatically build examples and test
	suite now. Moved local autoconf macros to a separate
	directory. Added a few comments.

	* m4/alut_c__attribute.m4, m4/alut_check_func.m4: Added.

	* acinclude.m4: Removed

2005-09-13  Sven Panne  <sven.panne@aedion.de>

	* configure.ac, src/alutLoader.c, src/alutWaveform.c: A few
	compatibility hacks to make it compile on Linux, MinGW/MSYS and
	Cygwin.

	* acinclude.m4: Added.

2005-09-12  Sven Panne  <sven.panne@aedion.de>

	* admin/.cvsignore: Improved ignorance.

	* src/Makefile.am: Cleaned up and fixed include paths. Added
	-no-undefined to libtool linker flags to prepare for building a
	Windows DLL. Added some comments.

2005-09-11  Sven Panne  <sven.panne@aedion.de>

	* configure.ac, src/alutWaveform.c: Cleaned up
	alutCreateBufferWaveform.

	* configure.ac, src/alutInit.c: Header cleanup.

	* src/alutUtil.c: Fixed braino in alutMicroSleep using nanosleep.

	* src/alutInit.c: _alutSanityCheck doesn't terminate the program
	in case of an error anymore, it simply sets the error
	condition. Some additional cleanup.

	* src/alutError.c: Print a message to stderr when an error
	condition is set and the ALUT_DEBUG environment variable is
	defined.

	* src/Makefile.am: Include src/helloworld.wav and src/README in
	distributions.

	* src/README: A few additions and corrections.

	* doc/alut.html: A few clarifications and a little reformatting.

2005-09-10  Sven Panne  <sven.panne@aedion.de>

	* configure.ac, doc/alut.html, examples/hello_world.c,
	include/AL/alut.h, src/Makefile.am, src/alutUtil.c,
	test_suite/test_fileloader.c, test_suite/test_memoryloader.c,
	test_suite/test_retrostuff.c, test_suite/test_waveforms.c: Added
	alutMicroSleep and use it.

	* include/AL/alut.h: Renamed ALUTAPI/ALUTAPIENTRY to
	ALUT_API/ALUT_APIENTRY, so we only #define macros with the ALUT_
	prefix.
